<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".UpdateVitalsActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
    	android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:layout_weight="2" > 
    	
	    <TextView
	        android:id="@+id/label_temperature"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignRight="@+id/label_systolic"
	        android:layout_alignBaseline="@+id/edit_temperature"
	        android:text="@string/label_temperature" />
		<EditText
	        android:id="@+id/edit_temperature"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:padding="8dp"
        	android:background="@drawable/text_border"
	        android:layout_toRightOf="@+id/label_temperature"
	        android:inputType="numberDecimal"
	        android:hint="@string/hint_temperature"
	        android:maxLength="4" />
	    <TextView
	        android:id="@+id/label_systolic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="5dp"
	        android:layout_below="@id/edit_temperature"
	        android:layout_alignParentLeft="true"
	        android:layout_alignBaseline="@+id/edit_systolic"
	        android:text="@string/label_systolic" />
		<EditText
	        android:id="@+id/edit_systolic"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:padding="8dp"
        	android:background="@drawable/text_border"
	        android:layout_below="@id/edit_temperature"
	        android:layout_toRightOf="@+id/label_systolic"
	        android:inputType="number"
	        android:hint="@string/hint_systolic"
	        android:maxLength="3" />
		<TextView
	        android:id="@+id/label_diastolic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/edit_systolic"
	        android:layout_alignParentLeft="true"
	        android:layout_alignRight="@+id/label_systolic"
	        android:layout_alignBaseline="@+id/edit_diastolic"
	        android:text="@string/label_diastolic" />
		<EditText
	        android:id="@+id/edit_diastolic"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:padding="8dp"
        	android:background="@drawable/text_border"
	        android:layout_below="@id/edit_systolic"
	        android:layout_toRightOf="@+id/label_diastolic"
	        android:inputType="number"
	        android:hint="@string/hint_diastolic"
	        android:maxLength="3" />
		<TextView
	        android:id="@+id/label_heart_rate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/edit_diastolic"
	        android:layout_alignParentLeft="true"
	        android:layout_alignRight="@+id/label_systolic"
	        android:layout_alignBaseline="@+id/edit_heart_rate"
	        android:text="@string/label_heart_rate" />
		<EditText
	        android:id="@+id/edit_heart_rate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:padding="8dp"
        	android:background="@drawable/text_border"
	        android:layout_below="@id/edit_diastolic"
	        android:layout_toRightOf="@+id/label_heart_rate"
	        android:inputType="number"
	        android:hint="@string/hint_heart_rate"
	        android:maxLength="3" />
		<TextView
	        android:id="@+id/label_update_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/edit_heart_rate"
	        android:layout_alignParentLeft="true"
	        android:layout_alignRight="@+id/label_systolic"
	        android:layout_alignBaseline="@+id/edit_update_time"
	        android:text="@string/label_time" />
		<EditText
	        android:id="@+id/edit_update_time"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:padding="8dp"
        	android:background="@drawable/text_border"
	        android:layout_below="@id/edit_heart_rate"
	        android:layout_toRightOf="@+id/label_update_time"
	        android:inputType="time"
	        android:digits="0123456789:"
	        android:hint="@string/hint_time"
	        android:maxLength="5"
	        android:singleLine="true"
	        android:imeOptions="actionDone" />
	
	</RelativeLayout>

	<LinearLayout
	    android:id="@+id/linearLayout1"
	   	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:gravity="center"
    	android:layout_weight="1" >
    	
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/button_save"
	        android:onClick="updateVitals" />
	
	</LinearLayout>

</LinearLayout>
