<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content" >
	
    <TableLayout
		android:id="@+id/vitals_table"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*" >
		
	    <TableRow  
	        android:id="@+id/tableRow0"  
	        android:layout_height="wrap_content"  
	        android:layout_width="match_parent" >
	        <TextView  
	            android:id="@+id/col_header_1"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/header_vitals_history_time"
	            android:background="@drawable/cell_border"
	            android:gravity="center">
	        </TextView>
	        <TextView  
	            android:id="@+id/col_header_2"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/header_vitals_history_temperature"
	            android:background="@drawable/cell_border"
	            android:gravity="center">
	        </TextView>
	        <TextView  
	            android:id="@+id/col_header_3"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/header_vitals_history_systolic"
	            android:background="@drawable/cell_border"
	            android:gravity="center">
	        </TextView>
	        <TextView  
	            android:id="@+id/col_header_4"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/header_vitals_history_diastolic"
	            android:background="@drawable/cell_border"
	            android:gravity="center">
	        </TextView>  
	        <TextView  
	            android:id="@+id/col_header_5"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/header_vitals_history_heart_rate"
	            android:background="@drawable/cell_border"
	            android:gravity="center">
	        </TextView>  
	    </TableRow>  
	</TableLayout>
</ScrollView>
