<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".UpdatePrescriptionActivity" >

	<RelativeLayout
        android:id="@+id/relativeLayout2"
    	android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:layout_weight="2" >
    	
	    <TextView
	        android:id="@+id/label_prescription_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="5dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignBaseline="@+id/edit_prescription_name"
	        android:text="@string/label_prescription_name" />
		<EditText
	        android:id="@+id/edit_prescription_name"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:padding="8dp"
        	android:background="@drawable/text_border"
	        android:layout_toRightOf="@+id/label_prescription_name"
	        android:inputType="text"
	        android:singleLine="true"
	        android:imeOptions="actionNext" />
		<TextView
	        android:id="@+id/label_prescription_instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:layout_below="@id/edit_prescription_name"
	        android:layout_alignParentLeft="true"
	        android:text="@string/label_prescription_instructions" />
		<EditText
	        android:id="@+id/edit_prescription_instructions"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:padding="8dp"
	        android:background="@drawable/text_border"
	        android:layout_below="@id/label_prescription_instructions"
	        android:inputType="textMultiLine"
	        android:lines="5"
	        android:gravity="top|left"
    		android:maxLength="250"
	        android:imeOptions="actionDone" />
    	
	</RelativeLayout>
	
	<LinearLayout
	    android:id="@+id/linearLayout1"
	   	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:gravity="center"
    	android:layout_weight="1" >
    	
	    <Button
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/button_save"
	        android:onClick="updatePrescription" />
	
	</LinearLayout>

</LinearLayout>
